--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 
 
-    <script src="./main.js"></script>
+    <script src="./snack_1.js"></script>
+    <script src="./snack_2.js"></script>
 </body>
 
 </html>
